# airLLM-testing

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: costs.json  rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_airllm_sharding.md  PRD_cost_model.md  PRD_quantization.md  TODO.md
experiments/: airllm_7b.py  assess_quality.py  baseline_hf_direct.py  baseline_ollama.py  bitsandbytes_check.py  break_even.py  compare_quantization.py  consolidate_metrics.py  make_figures.py  roofline.py  sensitivity.py  smoke_test.py
figures/: README.md
reports/: phase2_quantization_findings.md  phase2_smoke_findings.md  phase3_airllm_findings.md  phase3_baseline_findings.md  phase3_metrics_summary.md  phase3_quality_assessment.md  phase3_quantization_comparison.md  phase4_concept_analysis.md  phase4_economics.md  phase4_extension_sensitivity.md  test_report.md
results/: README.md  airllm_7b_fp16_2026-06-24T12-02-47.535900+00-00.json  airllm_7b_fp16_2026-06-24T12-18-54.468749+00-00.json  baseline_hf_direct_fp16_2026-06-24T11-25-33.205269+00-00.json  baseline_ollama_q4_2026-06-24T09-10-09.572963+00-00.json  baseline_ollama_q4_2026-06-24T13-02-37.178955+00-00.json  bnb_check_q4_0_5b_2026-06-23T14-09-34.363246+00-00.json  break_even_2026-06-24T13-15-10.116746+00-00.json  break_even_sensitivity_2026-06-24T13-24-26.291197+00-00.json  metrics_summary_2026-06-24T12-57-31.573866+00-00.json  quality_assessment_2026-06-24T13-03-03.561924+00-00.json  quantization_comparison_2026-06-24T12-52-56.247501+00-00.json  smoke_airllm_0_5b_2026-06-23T14-03-27.382788+00-00.json
scripts/: check_line_limit.py  secret_scan.py  test_report.py
src/airllm_bench/: __init__.py
src/airllm_bench/analysis/: __init__.py  charts.py  loader.py  metrics.py
src/airllm_bench/measure/: __init__.py  measurer.py  resources.py
src/airllm_bench/runners/: __init__.py  airllm_runner.py  hf_runner.py  ollama_runner.py
src/airllm_bench/sdk/: __init__.py  sdk.py
src/airllm_bench/services/: __init__.py  costs.py
src/airllm_bench/shared/: __init__.py  (+4 more)
tests/unit/: test_charts.py  test_config.py  test_costs.py  test_gatekeeper.py  test_loader.py  test_measurer.py  test_metrics.py  test_recorder.py  test_resources.py  test_runners.py  test_sdk.py  test_version.py
