[project]
name = "airllm-bench"
version = "1.0.0"
description = "EX05 — running a massive LLM locally with AirLLM, quantization, and performance benchmarking."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Mhmdabad" }]

# Lightweight, always-needed runtime libs (analysis + measurement helpers).
# The heavy ML stack is isolated in the optional 'ml' extra so CI never has to
# install torch/airllm/bitsandbytes just to run the lint + test quality gates.
dependencies = [
    "psutil>=5.9",
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# Heavy model-runtime deps — install locally with: uv sync --extra ml
# Version pins driven by airllm 2.11's import chain: it imports
# optimum.bettertransformer (removed in optimum 2.0), and that module in
# optimum 1.x requires transformers<4.49. So we cap optimum <2 and
# transformers <4.49; the unpinned latest versions break the import.
ml = [
    "torch>=2.2",
    "airllm>=2.11",
    "transformers>=4.40,<4.49",
    "optimum>=1.20,<2",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
    "huggingface-hub>=0.23",
    "nvidia-ml-py>=12.0",
    "sentencepiece>=0.2",
]

[dependency-groups]
# Dev tooling — installed by default `uv sync` (and in CI), without the ml extra.
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airllm_bench"]

# --- Linting (V3 S10: zero violations) -------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# --- Tests + coverage (V3 S9: >=85%) ---------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
# Runner modules need the heavy ml stack and are exercised via mocked/skipped
# integration tests, so they are excluded from the unit-coverage gate.
omit = ["src/*/runners/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
